--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,7 @@ executable(
     dependencies: [
         dependency('glib-2.0'),
         dependency('gobject-2.0'),
+        dependency('granite'),
         dependency('gtk+-3.0'),
         dependency('gee-0.8'),
     ],
