--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
  - docker
 
 env:
- - DEPENDENCY_PACKAGES="meson libgee-0.8-dev libgranite-dev libgtk-3-dev valac"
+ - DEPENDENCY_PACKAGES="desktop-file-utils meson libgee-0.8-dev libgranite-dev libgtk-3-dev valac"
 
 install:
  - docker pull elementary/docker:loki
