--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: elementary LLC. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
+               desktop-file-utils,
                libgee-0.8-dev,
                libgranite-dev (>= 0.5),
                libgtk-3-dev,
