--- a/meson.build
+++ b/meson.build
@@ -29,6 +29,7 @@ executable(
         dependency('granite'),
         dependency('gtk+-3.0'),
         dependency('gee-0.8'),
+        meson.get_compiler('vala').find_library('posix'),
     ],
     install : true
 )
