Enclose human name in quotes

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,5 @@ install:
 script:
   - houston ci
     --type system-app
-    --name-appstream io.elementary.shortcut-overlay
     --name-domain io.elementary.shortcut-overlay
-    --name-human Shortcut Overlay
+    --name-human "Shortcut Overlay"
