--- a/meson.build
+++ b/meson.build
@@ -29,7 +29,7 @@ executable(
     dependencies: [
         dependency('glib-2.0'),
         dependency('gobject-2.0'),
-        dependency('granite'),
+        dependency('granite', version: '>= 5.2.0'),
         dependency('gtk+-3.0'),
         dependency('gee-0.8'),
         meson.get_compiler('vala').find_library('posix'),
