--- a/data/meson.build
+++ b/data/meson.build
@@ -1,11 +1,20 @@
 i18n.merge_file (
-    'desktop',
-    input: meson.project_name() + '.desktop.in',
-    output: meson.project_name() + '.desktop',
+    input: 'shortcut-overlay.appdata.xml.in',
+    output: meson.project_name() + '.appdata.xml',
+    po_dir: join_paths(meson.source_root(), 'po', 'extra'),
+    type: 'xml',
     install: true,
-    install_dir: join_paths(get_option('datadir'), 'applications'),
+    install_dir: join_paths(get_option('datadir'), 'metainfo'),
+)
+
+i18n.merge_file (
+    'desktop',
+    input: 'shortcut-overlay.desktop.in',
+    output: meson.project_name() + '.desktop',
     po_dir: join_paths(meson.source_root (), 'po', 'extra'),
-    type: 'desktop'
+    type: 'desktop',
+    install: true,
+    install_dir: join_paths(get_option('datadir'), 'applications')
 )
 
 test (
