--- a/data/shortcut-overlay.appdata.xml.in
+++ b/data/shortcut-overlay.appdata.xml.in
@@ -9,6 +9,16 @@
   <description>
     <p></p>
   </description>
+  <releases>
+    <release version="1.1.0" date="2019-10-30" urgency="medium">
+      <description>
+        <ul>
+          <li>Add "Switch Layout" and "Close Window", shortcuts</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
+  </releases>
   <provides>
     <binary>io.elementary.shortcut-overlay</binary>
   </provides>
