--- a/meson.build
+++ b/meson.build
@@ -13,8 +13,10 @@ asresources = gnome.compile_resources(
     c_name: 'as'
 )
 
-add_global_arguments(
-    '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
+add_global_arguments([
+        '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
+        '-DHANDY_USE_UNSTABLE_API'
+    ],
     language:'c'
 )
 
@@ -31,6 +33,7 @@ executable(
         dependency('granite', version: '>= 5.4.0'),
         dependency('gtk+-3.0'),
         dependency('gee-0.8'),
+        dependency('libhandy-1', version: '>=0.80.0'),
         meson.get_compiler('vala').find_library('posix'),
     ],
     install : true
