--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper (>= 10.5.1),
                desktop-file-utils,
                libgee-0.8-dev,
                libgranite-dev (>= 0.5),
+               libhandy-1-dev (>=0.80.0),
                libgtk-3-dev,
                meson,
                valac
