--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,27 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    container:
+      image: elementary/docker:odin-unstable
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install Dependencies
+      run: |
+        apt update
+        apt install -y libgee-0.8-dev libgranite-dev libgtk-3-dev meson valac
+    - name: Build
+      env:
+        DESTDIR: out
+      run: |
+        meson build
+        ninja -C build
+        ninja -C build install
+
   lint:
 
     runs-on: ubuntu-latest
