--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libgee-0.8-dev libgranite-dev libgtk-3-dev meson valac
+        apt install -y libgee-0.8-dev libgranite-dev libgtk-3-dev libhandy-1-dev meson valac
     - name: Build
       env:
         DESTDIR: out
