--- a/data/shortcut-overlay.appdata.xml.in
+++ b/data/shortcut-overlay.appdata.xml.in
@@ -5,7 +5,7 @@
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>Shortcut Overlay</name>
-  <summary>View system keyboard shortcuts</summary>
+  <summary>View system shortcuts</summary>
   <description>
     <p></p>
   </description>
