--- a/data/shortcut-overlay.appdata.xml.in
+++ b/data/shortcut-overlay.appdata.xml.in
@@ -4,12 +4,21 @@
   <id>io.elementary.shortcut-overlay</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
-  <name>Shortcut Overlay</name>
+  <name>Shortcuts</name>
   <summary>View system shortcuts</summary>
   <description>
     <p></p>
   </description>
   <releases>
+    <release version="1.2.0" date="2021-07-14" urgency="medium">
+      <description>
+        <ul>
+          <li>Add screenshot shortcuts</li>
+          <li>Fix issues with multiple windows</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.1.2" date="2020-05-28" urgency="medium">
       <description>
         <ul>
