--- a/data/shortcut-overlay.appdata.xml.in
+++ b/data/shortcut-overlay.appdata.xml.in
@@ -38,7 +38,7 @@
   </provides>
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/elementary/shortcut-overlay/master/data/Screenshot@2x.png</image>
+      <image>https://raw.githubusercontent.com/elementary/shortcut-overlay/master/data/screenshot.png</image>
     </screenshot>
   </screenshots>
   <content_rating type="oars-1.1">
