--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-latest
 
     container:
-      image: elementary/docker:odin-unstable
+      image: elementary/docker:next-unstable
 
     steps:
     - uses: actions/checkout@v2
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libgee-0.8-dev libgranite-dev libgtk-3-dev libhandy-1-dev meson valac
+        apt install -y libgee-0.8-dev libgranite-7-dev libgtk-4-dev meson valac
     - name: Build
       env:
         DESTDIR: out
