--- a/debian/control
+++ b/debian/control
@@ -3,11 +3,9 @@ Section: gnome
 Priority: optional
 Maintainer: elementary LLC. <builds@elementary.io>
 Build-Depends: debhelper (>= 10.5.1),
-               desktop-file-utils,
                libgee-0.8-dev,
-               libgranite-dev (>= 0.5),
-               libhandy-1-dev (>=0.80.0),
-               libgtk-3-dev,
+               libgranite-7-dev,
+               libgtk-4-dev,
                meson,
                valac
 Standards-Version: 3.9.6
