--- a/meson.build
+++ b/meson.build
@@ -7,10 +7,8 @@ project(
 gnome = import('gnome')
 i18n = import('i18n')
 
-add_global_arguments([
-        '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
-        '-DHANDY_USE_UNSTABLE_API'
-    ],
+add_global_arguments(
+    '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
     language:'c'
 )
 
