Re-show in Applications Menu

--- a/data/shortcut-overlay.desktop.in
+++ b/data/shortcut-overlay.desktop.in
@@ -8,5 +8,5 @@ Icon=preferences-desktop-keyboard
 Type=Application
 Categories=Utility;Documentation;
 StartupNotify=true
-NoDisplay=true
+NoDisplay=false
 Keywords=cheatsheet;shortcut;overlay;keyboard;
