--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: CI
 
 on:
+  push:
+    branches: [master]
   pull_request:
     types:
       - opened
@@ -9,11 +11,14 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
 
-    runs-on: ubuntu-22.04
-
+    strategy:
+      fail-fast: false
+      matrix:
+        version: [stable, unstable, development-target]
     container:
-      image: elementary/docker:next-unstable
+      image: ghcr.io/elementary/docker:${{ matrix.version }}
 
     steps:
     - uses: actions/checkout@v3
@@ -31,10 +36,10 @@ jobs:
   lint:
 
     runs-on: ubuntu-latest
-    
+
     container:
       image: valalang/lint
-      
+
     steps:
     - uses: actions/checkout@v3
     - name: Lint
