--- a/.github/workflows/gettext.yml
+++ b/.github/workflows/gettext.yml
@@ -4,11 +4,17 @@ on:
     branches: [master]
 jobs:
   gettext_template:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-    - uses: elementary/actions/gettext-template@horus
+    - name: Clone repository
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GIT_USER_TOKEN }}
+
+    - name: Update Translation Files
+      uses: elementary/actions/gettext-template@next
       env:
-        GIT_USER_TOKEN: "${{ secrets.GIT_USER_TOKEN }}"
+        GIT_USER_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
         GIT_USER_NAME: "elementaryBot"
         GIT_USER_EMAIL: "builds@elementary.io"
