--- a/data/meson.build
+++ b/data/meson.build
@@ -1,6 +1,6 @@
 i18n.merge_file (
-    input: 'shortcut-overlay.appdata.xml.in',
-    output: meson.project_name() + '.appdata.xml',
+    input: 'shortcut-overlay.metainfo.xml.in',
+    output: meson.project_name() + '.metainfo.xml',
     po_dir: join_paths(meson.source_root(), 'po', 'extra'),
     type: 'xml',
     install: true,
