--- a/data/shortcut-overlay.metainfo.xml.in
+++ b/data/shortcut-overlay.metainfo.xml.in
@@ -89,4 +89,4 @@
     <release version="1.1.1" date="2020-04-02" urgency="medium" />
     <release version="1.1.0" date="2019-11-15" urgency="medium" />
   </releases>
-</component>keyboard
+</component>
