--- a/data/shortcut-overlay.metainfo.xml.in
+++ b/data/shortcut-overlay.metainfo.xml.in
@@ -38,6 +38,14 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.0" date="2024-05-15">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
+
     <release version="2.0.1" date="2022-10-26">
       <description>
         <ul>
@@ -78,14 +86,7 @@
       </description>
     </release>
 
-    <release version="1.1.2" date="2020-05-28" urgency="medium">
-      <description>
-        <ul>
-          <li>Updated translations</li>
-        </ul>
-      </description>
-    </release>
-
+    <release version="1.1.2" date="2020-05-28" urgency="medium" />
     <release version="1.1.1" date="2020-04-02" urgency="medium" />
     <release version="1.1.0" date="2019-11-15" urgency="medium" />
   </releases>
