--- a/data/shortcut-overlay.metainfo.xml.in
+++ b/data/shortcut-overlay.metainfo.xml.in
@@ -42,6 +42,7 @@
       <description>
         <ul>
           <li>Updated translations</li>
+          <li>Show screen reader shortcut</li>
         </ul>
       </description>
     </release>
