--- a/data/shortcut-overlay.metainfo.xml.in
+++ b/data/shortcut-overlay.metainfo.xml.in
@@ -15,7 +15,7 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://raw.githubusercontent.com/elementary/shortcut-overlay/master/data/screenshot.png</image>
+      <image>https://raw.githubusercontent.com/elementary/shortcut-overlay/8.0.0/data/screenshot.png</image>
     </screenshot>
   </screenshots>
 
@@ -38,7 +38,7 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
-    <release version="8.0.0" date="2024-05-15">
+    <release version="8.0.0" date="2024-06-06">
       <description>
         <ul>
           <li>Updated translations</li>
