--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt update
-        apt install -y libgee-0.8-dev libgranite-7-dev libgtk-4-dev meson valac
+        apt install -y libgee-0.8-dev libgranite-7-dev libgtk-4-dev libpantheon-wayland-1-dev meson valac
     - name: Build
       env:
         DESTDIR: out
