Control: add libpantheon-wayland-1-dev

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 10.5.1),
                libgee-0.8-dev,
                libgranite-7-dev (>= 7.3.0),
                libgtk-4-dev,
+               libpantheon-wayland-1-dev,
                meson,
                valac
 Standards-Version: 3.9.6
