--- a/data/shortcut-overlay.metainfo.xml.in
+++ b/data/shortcut-overlay.metainfo.xml.in
@@ -38,6 +38,17 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.1.0" date="2025-05-19">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/shortcut-overlay/issues/150">Labels are not accessible</issue>
+      </issues>
+    </release>
+
     <release version="8.0.1" date="2024-08-18">
       <description>
         <ul>
