MainWindow: center and keep above with Pantheon protocol (#158)

--- a/meson.build
+++ b/meson.build
@@ -38,6 +38,7 @@ executable(
         dependency('granite-7', version: '>= 7.3.0'),
         dependency('gtk4'),
         dependency('gee-0.8'),
+        dependency('pantheon-wayland-1'),
         meson.get_compiler('vala').find_library('posix'),
     ],
     install : true
