--- a/.github/workflows/gettext.yml
+++ b/.github/workflows/gettext.yml
@@ -2,6 +2,7 @@ name: Gettext Updates
 on:
   push:
     branches: [main]
+
 jobs:
   gettext_template:
     runs-on: ubuntu-latest
@@ -13,7 +14,7 @@ jobs:
         token: ${{ secrets.GIT_USER_TOKEN }}
 
     - name: Update Translation Files
-      uses: elementary/actions/gettext-template@next
+      uses: elementary/actions/gettext-template@main
       env:
         GIT_USER_TOKEN: ${{ secrets.GIT_USER_TOKEN }}
         GIT_USER_NAME: "elementaryBot"
